fixed a bug. The bug was when the grid size is set to 100, the status bar overflowed

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ main {
 }
 
 .status {
-  padding: 17px 24px;
+  padding: 17px 24px 0 24px;
   flex: 1 1 auto;
 }
 
